@@ -1,3 +1,5 @@
+ * added test for buffering across a mod_http2+mod_proxy_http2 connection
+ * added TRACE2 logging to show buffering flag when writing task output
  * new option 'H2OutputBuffering on/off' which controls the buffering of stream output.
    The default is on, which is the behaviour of older mod-h2 versions. When off, all
    bytes are made available immediately to the main connection for sending them
